cabal-version: 1.12

name:           haskell
version:        0.1.0.0
description:    Assignments and problems solved in order to learn Haskell.
homepage:       https://github.com/turbocartpig/mfp
bug-reports:    https://github.com/turbocartpig/mfp
author:         Dennis Kristiansen
maintainer:     denniskr@stud.ntnu.no
copyright:      2020 Dennis Kristiansen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/turbocartpig/mfp

library
  exposed-modules:
      Problem1
      Problem2
      Problem3
      Problem4
      Problem5
      Problem6
      Problem7
      Problem8
      Problem10
      Problem11
      Maybe
      IOTesting
  other-modules:
      Paths_haskell
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable hello
  main-is: Main.hs
  other-modules:
      Paths_haskell
  hs-source-dirs:
      src
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Wall
  build-depends:
      base >=4.7 && <5
    , haskell
  default-language: Haskell2010
