[tool.poetry]
name = "python"
version = "0.1.0"
description = "Python exercies"
authors = ["Dennis Kristiansen <denniskristiansen@protonmail.com>"]
license = "MiT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
